# Particles_CPP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DefColor.frag  LICENSE  Makefile  cmake_install.cmake  readme.md  readme.txt  sp.frag  sp1.frag  sp2.frag  sp3.frag  sp4.frag  sp5.frag
src/: getpath.hpp  headers.hpp  main.cpp  particle.hpp
